k8s/base/cerberus-back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerberus-back
  namespace: cerberus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerberus-back
  template:
    metadata:
      labels:
        app: cerberus-back
    spec:
      containers:
        - name: cerberus-back
          image: cerberus-back:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-storage
              mountPath: /app/storage
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: media-shared-storage
