k8s/base/cerberus-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerberus-back
  namespace: cerberus
spec:
  type: ClusterIP
  selector:
    app: cerberus-back
  ports:
    - port: 80
      targetPort: 8080
