k8s/base/cerberus-back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cerberus-back
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: api.cerberus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cerberus-back
                port:
                  number: 443
